# log4rs-fluentd

./: Cargo.toml
src/: fluentd.rs  lib.rs
